...
        android:layout_alignStart="@+id/Button_ID_5"
        android:layout_alignTop="@+id/Button_ID_1"
        android:minWidth="50dip"
        android:text="2"
        android:textSize="18sp"
        android:layout_marginTop="254dp"
        app:layout_constraintTop_toBottomOf="@+id/numberView"
        app:layout_constraintLeft_toRightOf="@+id/Button_ID_1"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/Button_ID_6"
        android:layout_width="80dp"
...
        android:layout_marginTop="158dp"
        app:layout_constraintTop_toBottomOf="@+id/numberView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/Button_ID_0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/Button_ID_C"
        android:layout_alignStart="@+id/Button_ID_5"
        android:layout_alignTop="@+id/Button_ID_C"
        android:minWidth="50dip"
...
